--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
     <h1 color=>I invented electricity</h1>
     <h1>Also I am fun</h1>
     <img src="images/tal.jpg" height="500" width="auto">
-    <h2><a href="home.html">back</a></h2>
+    <h2><a href="index.html">back</a></h2>
 </body>
 </html>
