--- a/about.html
+++ b/about.html
@@ -6,11 +6,17 @@
     <title>About</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
-<body c>
-    <h1>My name is Tal Weiss</h1>
-    <h1 color=>I invented electricity</h1>
-    <h1>Also I am fun</h1>
-    <img src="images/tal.jpg" height="500" width="auto">
-    <h2><a href="index.html">back</a></h2>
+<body>
+    <section class="flex-container">
+        <div class="item"><a href="index.html">Home</a></div>
+        <div class="item"><a href="projects.html">Projects</a></div>
+        <div class="item"><a href="about.html">About</a></div>
+    </section>
+    <section class="flex-container-horizental">
+    <h2 class="item-h1">My name is Tal Weiss</h1>
+    <h2 class="item-h1">I invented electricity</h1>
+    <h2 class="item-h1">Also I am fun</h1>
+    <img class="img" src="images/tal.jpg" >
+</section>
 </body>
 </html>
