--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <section class="flex-container">
+        <div class="item"><a href="index.html">Home</a></div>
+        <div class="item"><a href="projects.html">Projects</a></div>
+        <div class="item"><a href="about.html">About</a></div>
+    </section>
 </body>
 </html>
