--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Welcome To Tal Weiss World</h1>
-    <ol>
-        <li>what</li>
-        <li>is</li>
-        <li>up</li>
-    </ol>
-    <div>this is a div yo</div>
-    <a href="https://www.google.com/">Maybe search</a>
-    <h2><a href="about.html">click</a></h2>
+    <section class="flex-container">
+        <div class="item"><a href="index.html">Home</a></div>
+        <div class="item" class="flex-container"><a href="projects.html">Projects</a></div>
+        <div class="item"><a href="about.html">About</a></div>
+    </section>
+    <section class="flex-container-horizental">
+    <h1 class="item-h1">Welcome To Tal Weiss World</h1>
+    <a class="item-h1" href="https://www.google.com/">Maybe search</a>
+</section>
 </body>
 </html>
