added draw page

--- a/draw.html
+++ b/draw.html
@@ -3,24 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Draw</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="flex-container">
+    <div class="flex-container">
         <div class="item"><a href="index.html">Home</a></div>
         <div class="item" class="flex-container"><a href="projects.html">Projects</a></div>
         <div class="item"><a href="draw.html">Draw</a></div>
         <div class="item"><a href="about.html">About</a></div>
-    </section>
-    <section class="flex-container-horizental">
-    <h1 class="item-h1">Welcome To Tal Weiss World</h1>
-    <a class="item-h1" href="https://www.google.com/">Maybe search</a>
-
-    
-    
-    <script src="javascript.js">
+    </div>
+    <div class="draw-container" ></div>
+    <script src="sketch.js">
     </script>
-</section>
+
+
 </body>
 </html>
