improved site design and usablity across platforms

--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
 </head>
 <body>
-    <section class="flex-container">
-        <div class="item"><a href="index.html">Home</a></div>
-        <div class="item"><a href="projects.html">Projects</a></div>
-        <div class="item"><a href="about.html">About</a></div>
-    </section>
+    <header class="header">
+        <div class="logo-container"><a href="index.html"><img class="header-logo" src="images/phonix2.png"></a></div>
+        <div class="header-a"><a href="index.html">Home</a></div>
+        <div class="header-a" class="flex-container"><a href="projects.html">Projects</a></div>
+        <div class="header-a"><a href="draw.html">Draw</a></div>
+        <div class="header-a"><a href="about.html">About</a></div>
+    </header>
 </body>
 </html>
