--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');</style>
 </head>
 <body>
-    <section class="flex-container">
-        <div class="item"><a href="index.html">Home</a></div>
-        <div class="item" class="flex-container"><a href="projects.html">Projects</a></div>
-        <div class="item"><a href="draw.html">Draw</a></div>
-        <div class="item"><a href="about.html">About</a></div>
-    </section>
+    <header class="header">
+        <div class="logo-container"><a href="index.html"><img class="header-logo" src="images/phonix2.png"></a></div>
+        <div class="header-a"><a href="index.html">Home</a></div>
+        <div class="header-a" class="flex-container"><a href="projects.html">Projects</a></div>
+        <div class="header-a"><a href="draw.html">Draw</a></div>
+        <div class="header-a"><a href="about.html">About</a></div>
+    </header>
     <section class="flex-container-horizental">
     <h1 class="item-h1">Welcome To Tal Weiss World</h1>
-    <a class="item-h1" href="https://www.google.com/">Maybe search</a>
-
     
     
     <script src="javascript.js">
